--- a/CV/style.css
+++ b/CV/style.css
@@ -1,115 +1,439 @@
-:root {
-  --primary-text-color: #6c4342;
-  --secondary-text-color: #7a5554;
-  --text-color: #986a69;
-  --link-hover-background-color: #b48686;
+/* body style */
+body {
+  margin: 0;
+  min-height: 100%;
+  background-color: white;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.home {
-  color: var(--primary-text-color);
+/* wrapper-title */
+.wrapper-title {
+  padding: 50px;
+  width: 75%;
+  margin: auto;
+  background-color: white;
   text-align: center;
 }
 
-#logo {
+/* text-body */
+.text-body {
+  font-size: 14px;
+  line-height: 50px;
+  text-align: center;
+  letter-spacing: 1px;
+  color: #464646;
+  padding: 2px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+
+/* section-main */
+.section-main {
   position: relative;
-  top: -10px;
-  right: -650px;
+  z-index: 999;
+  margin: auto;
+  padding: 120px;
+  background-image: url("../images/main-background.jpg");
+  background-position: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-attachment: scroll;
 }
 
-h1 {
-  color: var(--primary-text-color);
+/* vertical divider */
+.vertical-divider {
+  width: 3px;
+  height: 40px;
+  margin: auto;
+  background-color: rgb(66, 63, 63);
 }
 
-.bold-type {
-  color: var(--secondary-text-color);
+/* horizontal divider */
+.horizontal-divider {
+  background-color: black;
+  position: relative;
+  margin-top: 70px;
+  margin-bottom: 70px;
+  height: 3px;
+  width: 1200px;
 }
 
-p {
-  color: var(--text-color);
+/* section intro */
+.section-intro {
+  margin: auto;
+  padding: 50px;
 }
 
-h2 {
-  color: #2e5c8b;
+/* section project */
+.section-project {
+  margin-top: 100px;
+  margin-bottom: 100px;
+  padding-top: 100px;
 }
 
-li {
-  color: #1f88ff;
-}
-
-.main {
-  float: right;
-  padding: 10px;
-}
-
-.details {
-  width: 500px;
-  height: auto;
-  margin: 50px;
-  padding: 20px;
-  border: 10px solid darkcyan;
-  box-sizing: border-box;
-}
-
-a {
-  color: black;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-
-a:hover {
-  background-color: var(--link-hover-background-color);
-  box-shadow: 3px 3px darkorchid;
-}
-
-video:hover {
-  border: 5px solid orchid;
-  box-sizing: content-box;
-}
-
-.contact-label {
-  font-weight: bold;
-  color: whitesmoke;
+/* container and buttons */
+.container {
+  padding-top: 50px;
+  padding-bottom: 15px;
+  margin: auto;
   text-align: center;
 }
 
-::placeholder {
-  color: var(--secondary-text-color);
+.buttons {
+  padding: 30px;
+  margin: auto;
 }
 
-#link {
+/* port-container */
+.port-container {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 100px;
+}
+
+/* w-cointainer */
+.w-container {
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 940px;
+}
+.w-container:before,
+.w-container:after {
+  content: " ";
+  display: table;
+  grid-column-start: 1;
+  grid-row-start: 1;
+  grid-column-end: 2;
+  grid-row-end: 2;
+}
+.w-container:after {
+  clear: both;
+}
+
+/* navhome */
+.navhome {
+  position: relative;
+  z-index: 1000;
+}
+
+.navhome {
   position: absolute;
-  bottom: 0pt;
-  left: 0pt;
+  left: 0%;
+  top: 0%;
+  right: 0%;
+  bottom: auto;
+}
+
+.navhome.inner {
+  position: fixed;
+  z-index: 998;
+  background-image: url("../images/main-background.jpg");
+  background-position: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+/* div-block */
+.div-block {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  text-align: center;
+}
+
+/* boxes style */
+.box {
+  width: 300px;
+  padding: 25px;
+  border: 3px solid;
+  font-size: 22px;
+  text-align: center;
+  letter-spacing: 2px;
+  text-transform: uppercase;
+}
+
+.box.gray {
+  width: 31%;
+  border-color: black;
+  color: black;
+  font-size: 18px;
+}
+
+.box.gray:hover {
+  border-color: black;
+  background-color: rgb(113, 112, 112);
+}
+
+.box.cyan {
+  border-color: darkcyan;
+  color: darkcyan;
+  font-size: 18px;
+}
+
+.box.cyan:hover {
+  border-color: darkcyan;
+  background-color: rgb(145, 172, 225);
+}
+
+.box.red {
+  border-color: darkred;
+  color: darkred;
+  font-size: 18px;
+}
+
+.box.red:hover {
+  background-color: rgb(232, 137, 137);
+}
+
+.box.green {
+  border-color: darkgreen;
+  color: darkgreen;
+  font-size: 18px;
+}
+
+.box.green:hover {
+  background-color: rgb(109, 210, 109);
+}
+
+/* nav-name */
+.nav-name {
+  display: inline-block;
+  height: 60px;
+  margin: auto;
+  padding: 10px;
+  border-radius: 50%;
+}
+
+/* nav-menu */
+.nav-menu {
+  float: right;
+  padding: 20px;
+  margin: auto;
+}
+
+/* nav-link and w-nav-link */
+.nav-link {
+  width: 140px;
+  height: 30px;
+  margin: auto;
+  padding: auto;
+  line-height: 35px;
+  display: inline-block;
+  border: solid whitesmoke;
+  border-width: 0px 0px 1px;
+  text-transform: uppercase;
+  font-size: 14px;
+  text-align: center;
+  letter-spacing: 4px;
+  background-color: hsla(0, 0%, 100%, 0.2);
+  color: white;
+}
+
+.nav-link:hover {
+  background-color: rgb(146, 146, 146);
+}
+
+.w-nav-link {
+  position: relative;
+  display: inline-flexbox;
+  color: whitesmoke;
+  padding: 10px;
+  text-align: center;
+  margin: auto;
+}
+
+/* text styling */
+h6 {
+  text-align: center;
+  margin-top: auto;
+  margin-bottom: auto;
+  direction: ltr;
+  color: #3d414c;
+  font-size: 15px;
+  letter-spacing: 4px;
+  text-transform: uppercase;
+  white-space: normal;
+  padding: 7px;
+  line-height: 20px;
+}
+
+.h1 {
+  font-size: 30px;
+  line-height: 40px;
+  letter-spacing: 9px;
+  text-transform: uppercase;
+}
+
+.h3 {
+  margin-bottom: 26px;
+  direction: ltr;
+  color: #464646;
+  font-size: 20px;
+  line-height: 24px;
+  font-weight: 900;
+  text-align: center;
+  letter-spacing: 9px;
+  text-transform: uppercase;
+  white-space: normal;
+}
+
+.h2 {
+  margin-bottom: 40px;
+  font-size: 27px;
+  font-weight: 300;
+  line-height: 5px;
+  text-align: center;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  color: #32343a;
+}
+
+h5 {
+  text-align: center;
+  color: #32343a;
+  letter-spacing: 2px;
+  line-height: normal;
+}
+
+/* some photo styling */
+#ires {
+  border: 2px solid black;
+  width: 1000px;
+  height: 350px;
+}
+
+#study {
+  border: 2px solid black;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 600px;
+  height: 400px;
+}
+
+#mycv {
+  border: 2px solid black;
+  width: 900px;
+  height: 1000px;
+}
+
+#endava {
+  width: 1000px;
+  height: 350px;
+}
+
+/* social media icons */
+
+.social-media {
+  color: rgb(89, 88, 88);
+}
+
+.social-media:hover {
+  color: rgb(239, 230, 230);
+}
+
+ion-icon {
+  width: 40px;
+  height: 40px;
+}
+
+footer {
+  display: flex;
+  background-image: url("../images/main-background.jpg");
+  position: relative;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 60px;
+  width: 100%;
+  border-top: 1px solid white;
+  justify-content: center;
+  align-items: center;
+}
+
+/* links-decoration-none  */
+
+a:link {
+  text-decoration: none;
+}
+a:visited {
+  text-decoration: none;
+}
+a:active {
+  text-decoration: none;
+}
+
+/* contact form main page*/
+.form {
+  color: rgb(89, 88, 88);
+  text-size-adjust: 17px;
+  letter-spacing: 7px;
+  text-transform: uppercase;
+  background-color: black;
+  padding: 10px;
+  text-align: center;
+}
+
+div.form {
+  margin: auto;
+  width: 300px;
+}
+
+.form:hover {
+  color: white;
+}
+
+/* contact form page */
+#logo-contact {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
 }
 
 .contact-form {
-  width: 100%;
-  height: 100vh;
-  margin: 0;
-  background-color: #56313c;
-  font-family: Arial, Helvetica, sans-serif;
+  background-image: url(../images/main-background.jpg);
+  align-items: center;
+}
+
+.contact-label-title {
+  color: white;
+  font-size: 30px;
+  line-height: 20px;
+  text-align: center;
+  letter-spacing: 3px;
+}
+
+#label {
+  line-height: 40px;
+  margin-bottom: 40px;
+}
+
+.contact-label {
+  color: white;
+  font-size: 18px;
+  line-height: 30px;
+  text-align: center;
+  letter-spacing: 1px;
 }
 
 .form1 {
-  width: 60vw;
-  max-width: 350px;
-  min-width: 50px;
-  margin: 0 auto;
-  padding-bottom: 2em;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
 }
 
 .set-contact {
-  padding: 5px;
-  border: 1px solid black;
-  background-color: #f6e2e8;
+  background-color: #cccbcb;
+  color: rgb(78, 78, 84);
 }
 
-input[type="submit"] {
-  display: block;
-  width: 70%;
-  margin: 40px auto;
-  height: 50px;
-  font-size: 1.1rem;
-  background-color: #f6e2e8;
-  border-color: black;
-  color: var(--secondary-text-color);
+.submit {
+  border: 1px solid black;
+  color: black;
+  background-color: #cccbcb;
+}
+
+.submit:hover {
+  background-color: gray;
+  border: 2px solid black;
 }
